dmc-core/tests/snapshots/snapshots__email_autolink.snap
---
source: dmc-core/tests/snapshots.rs
assertion_line: 32
expression: out
---
{
  "frontmatter": null,
  "frontmatterRaw": "",
  "content": "contact <hi@example.com>",
  "html": "<p>contact <a href=\"mailto:hi@example.com\">hi@example.com</a></p>",
  "body": "[REDACTED_FACTORY_STRING]",
  "excerpt": "contact hi@example.com",
  "metadata": {
    "readingTime": 1,
    "wordCount": 2
  },
  "toc": [],
  "imports": [],
  "exports": []
}
