dmc-core/tests/snapshots/snapshots__task_list.snap
---
source: dmc-core/tests/snapshots.rs
assertion_line: 59
expression: out
---
{
  "frontmatter": null,
  "frontmatterRaw": "",
  "content": "- [x] done\n- [ ] open\n",
  "html": "<ul><li><input type=\"checkbox\" disabled checked />done</li><li><input type=\"checkbox\" disabled />open</li></ul>",
  "body": "[REDACTED_FACTORY_STRING]",
  "excerpt": "doneopen",
  "metadata": {
    "readingTime": 1,
    "wordCount": 1
  },
  "toc": [],
  "imports": [],
  "exports": []
}
